--- a/app/server/package.json
+++ b/app/server/package.json
@@ -11,6 +11,7 @@
   "author": "Khoa Le",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
